// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. group of topics 1`] = `
<div>
  <div>
    <a
      href="/topic/football"
    >
      <div>
        <div>
          Football
        </div>
      </div>
    </a>
  </div>
  <div>
    <a
      href="/topic/manchester-united"
    >
      <div>
        <div>
          Manchester United FC
        </div>
      </div>
    </a>
  </div>
  <div>
    <a
      href="/topic/chelsea"
    >
      <div>
        <div>
          Chelsea FC
        </div>
      </div>
    </a>
  </div>
  <div>
    <a
      href="/topic/arsenal"
    >
      <div>
        <div>
          Arsenal
        </div>
      </div>
    </a>
  </div>
  <div>
    <a
      href="/topic/rugby-union"
    >
      <div>
        <div>
          Rugby Union
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`2. onpress handler is called with the expected args 1`] = `
Array [
  Array [
    "event",
    Object {
      "name": "Football",
      "slug": "football",
    },
  ],
]
`;

exports[`3. onpress sends analytics 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
      },
      "component": "Page",
      "object": "Article",
    },
  ],
  Array [
    Object {
      "action": "Pressed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
        "name": "Football",
        "slug": "football",
      },
      "component": "TopicLink",
      "object": "Article",
    },
  ],
]
`;
